<?xml version="1.0"?>
<package>
    <name>navigation</name>
    <version>0.4.5</version>
    <description>Navigation for the coffe dog</description>
    <maintainer email="ShineySmile.zy@gmail.com">sasaki</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roslaunch</build_depend>
    <!--  <run_depend>amcl</run_depend>-->
    <!-- Disabling till package is released -->
    <!-- <run_depend>frontier_exploration</run_depend> -->
    <!--  <run_depend>gmapping</run_depend>-->
    <run_depend>map_server</run_depend>
    <run_depend>move_base</run_depend>
    <run_depend>navfn</run_depend>
    <run_depend>base_local_planner</run_depend>
    <run_depend>dwa_local_planner</run_depend>
    <run_depend>teb_local_planner</run_depend>

    <export>
    </export>
</package>
